[package]
name = "crimson-redline"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "A sinister terminal-based hacking simulator with persistent user authentication"
license = "MIT"
repository = "https://github.com/yourusername/CRIMSON-REDLINE"

[dependencies]
# Terminal UI and manipulation
crossterm = "0.27"
ratatui = "0.26"

# Async runtime for animations
tokio = { version = "1.35", features = ["full"] }

# Security and encryption
bcrypt = "0.15"
rand = "0.8"

# Data serialization and storage
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# File system and paths
directories = "5.0"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Colored output (for red theme)
colored = "2.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true